# mousemux

./: AGENTS.md  Cargo.toml  README.md  config.example.yaml  mousefold.service  mousemux.service
.codex/skills/config-reload-validation/: SKILL.md
.codex/skills/linux-input-pipeline/: SKILL.md
.codex/skills/remapper-test-diagnostics/: SKILL.md
.codex/skills/rust-remapper-architecture/: SKILL.md
.codex/skills/rust-tooling-conventions/: SKILL.md
.codex/skills/systemd-daemon-ops/: SKILL.md
docs/: design-notes.md  requirements.md
src/: app.rs  cli.rs  config.rs  device.rs  error.rs  main.rs  router.rs  virtual_keyboard.rs  virtual_mouse.rs
src/config/: mod.rs
