[package]
name = "mousefold"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = "0.17.4"
clap = { version = "4.6.0", features = ["derive"] }
evdev = { version = "0.13.2", features = ["tokio"] }
fern = { version = "0.7.1", features = ["colored"] }
libc = "0.2"
log = "0.4.29"
notify-rust = "4.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
